--- a/pubspec.yaml
+++ b/pubspec.yaml
@@ -38,6 +38,9 @@ dependencies:
   http: ^0.13.5
   flutter_svg: ^1.1.6
   shared_preferences: ^2.0.15
+  percent_indicator: ^4.0.1
+  flutter_slidable: ^2.0.0
+  confirm_dialog: ^1.0.1
 
 dev_dependencies:
   flutter_test:
